// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id="testing"
      name="testing"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for="testing"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="true"
    data-error="false"
  >
    <input
      aria-invalid="false"
      checked=""
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r4:"
      name=":r4:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r4:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="true"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="true"
    data-error="false"
  >
    <input
      aria-invalid="false"
      checked=""
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      disabled=""
      id=":r6:"
      name=":r6:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r6:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="true"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      disabled=""
      id=":r2:"
      name=":r2:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r2:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r5:"
      name=":r5:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r5:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="true"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      disabled=""
      id=":r7:"
      name=":r7:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r7:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly invisible 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
    data-visibility="true"
  >
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r8:"
      name=":r8:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r8:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      aria-label="check"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r1:"
      name=":r1:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly required 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

.cache-1cuz60-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r3:"
      name=":r3:"
      required=""
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r3:"
    >
      Checkbox Label
    </label>
    <sup>
      <svg
        class="cache-1cuz60-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":rd:"
      name=":rd:"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":rd:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="true"
  >
    <input
      aria-describedby=":r9:-hint"
      aria-invalid="true"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":r9:"
      name=":r9:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":r9:"
    >
      Checkbox Label
    </label>
  </div>
  .cache-1czoby1-StyledText-PaddedText {
  color: #b3144d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<p
    class="eqr7bqq4 cache-1czoby1-StyledText-PaddedText e13y3mga0"
  >
    test error
  </p>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="indeterminate"
    data-error="false"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":rg:"
      name=":rg:"
      type="checkbox"
      value=""
    />
    <svg
      class="cache-1lcemq7-StyledIcon eqr7bqq3"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":rg:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eqr7bqq0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-cmn72i-StyledSvg e1y1n78x1"
        role="progressbar"
        style="height: 24px; width: 24px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#e9eaeb"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#521094"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":rb:"
      name=":rb:"
      type="checkbox"
      value=""
    />
    <label
      for=":rb:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-16jg2tj-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-16jg2tj-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-16jg2tj-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-16jg2tj-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-16jg2tj-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-16jg2tj-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eqr7bqq0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-cmn72i-StyledSvg e1y1n78x1"
        role="progressbar"
        style="height: 24px; width: 24px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#e9eaeb"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#521094"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      aria-label="check"
      class="cache-16jg2tj-CheckboxInput eqr7bqq2"
      id=":rc:"
      name=":rc:"
      type="checkbox"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-ium700-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 37px;
  width: 37px;
  opacity: 0;
  border-width: 0;
}

.cache-ium700-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-ium700-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-ium700-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-ium700-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-ium700-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-ium700-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-ium700-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-ium700-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-ium700-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-ium700-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-mu6xj5-StyledIcon {
  border-radius: 4px;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <input
      aria-invalid="false"
      class="cache-ium700-CheckboxInput eqr7bqq2"
      id=":re:"
      name=":re:"
      type="checkbox"
      value="test"
    />
    <svg
      class="cache-mu6xj5-StyledIcon eqr7bqq3"
      size="37"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-1at8irr-InnerCheckbox eqr7bqq7"
          height="14"
          rx="2px"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nkq693-CheckMixedMark eqr7bqq5"
          height="2"
          rx="1"
          width="8"
          x="8"
          y="11"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eqr7bqq6"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <label
      for=":re:"
    >
      Checkbox Label
    </label>
  </div>
  .cache-f7u8fx-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='false'],
.cache-f7u8fx-CheckboxContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-f7u8fx-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq6,
.cache-f7u8fx-CheckboxContainer .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-f7u8fx-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

.cache-euwc5b-StyledActivityContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-ium700-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 37px;
  width: 37px;
  opacity: 0;
  border-width: 0;
}

.cache-ium700-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-ium700-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-ium700-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-ium700-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-ium700-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-ium700-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-ium700-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-ium700-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-ium700-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-ium700-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffe3ed;
  fill: #e51963;
}

.cache-ium700-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffe3ed;
}

<div
    aria-disabled="false"
    class="cache-f7u8fx-CheckboxContainer eqr7bqq1"
    data-checked="false"
    data-error="false"
  >
    <div
      class="cache-euwc5b-StyledActivityContainer eqr7bqq0"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-cmn72i-StyledSvg e1y1n78x1"
        role="progressbar"
        style="height: 37px; width: 37px;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#e9eaeb"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#521094"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="cache-ium700-CheckboxInput eqr7bqq2"
      id=":rf:"
      name=":rf:"
      type="checkbox"
      value="test"
    />
    <label
      for=":rf:"
    >
      Checkbox Label
    </label>
  </div>
</DocumentFragment>
`;
